testdata/baselines/reference/submodule/conformance/privateNameAndObjectRestSpread.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNameAndObjectRestSpread.ts(7,13): error TS2339: Property '#prop' does not exist on type '{}'.
privateNameAndObjectRestSpread.ts(9,14): error TS2339: Property '#prop' does not exist on type '{}'.
privateNameAndObjectRestSpread.ts(12,17): error TS2339: Property '#propStatic' does not exist on type '{ prototype: C; }'.
privateNameAndObjectRestSpread.ts(14,15): error TS2339: Property '#propStatic' does not exist on type '{ prototype: C; }'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNameAndObjectRestSpread.ts (4 errors) ====
    class C {
        #prop = 1;
        static #propStatic = 1;
    
        method(other: C) {
            const obj = { ...other };
            obj.#prop;
                ~~~~~
!!! error TS2339: Property '#prop' does not exist on type '{}'.
            const { ...rest } = other;
            rest.#prop;
                 ~~~~~
!!! error TS2339: Property '#prop' does not exist on type '{}'.
    
            const statics = { ... C};
            statics.#propStatic
                    ~~~~~~~~~~~
!!! error TS2339: Property '#propStatic' does not exist on type '{ prototype: C; }'.
            const { ...sRest } = C;
            sRest.#propStatic;
                  ~~~~~~~~~~~
!!! error TS2339: Property '#propStatic' does not exist on type '{ prototype: C; }'.
        }
    }